<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/cart_item_name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/term_k_neve" />

    <TextView
        android:id="@+id/cart_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ar" />

    <Button
        android:id="@+id/cart_item_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/torles" />
</LinearLayout>
