<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#F6F3F0">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/registration"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_below="@id/registrationTextView"

        />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_below="@id/usernameEditText"

        />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/userEmailEditText"

        />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
         android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_below="@id/passwordEditText"

        />

    <LinearLayout
        android:id="@+id/gombokreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/passwordAgainEditText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:onClick="register"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="#4CAF50"



            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/cancel"
            android:onClick="cancel"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="#E91E63"



            />





    </LinearLayout>




</RelativeLayout>